# job-miner

./: ARCHITECTURE.md  CHECKLIST.md  CONTRIBUTING.md  Dockerfile  GROQ_SETUP.md  LICENSE  Makefile  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  START_HERE.md  analyze_jobs.py  docker-compose.yml  pyproject.toml  setup.sh
.github/workflows/: job-scraper.yml
data/: sample_jobs.json
jobminer/: __init__.py  companies.py  config.py  llm_filter.py  main.py  models.py  scraper.py
jobminer/scrapers/: __init__.py  base.py  job_boards.py
tests/: test_basic.py
