[tool.poetry]
name = "jobminer"
version = "0.1.0"
description = "Automated job scraper for senior tech positions at established companies"
authors = ["Jorge Blasco <jorge.blasco.soto@maersk.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"
selenium = "^4.15.0"
pandas = "^2.1.3"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
PyYAML = "^6.0.1"
python-dotenv = "^1.0.0"
lxml = "^4.9.3"
webdriver-manager = "^4.0.1"
ollama = "^0.1.0"
openai = "^1.3.0"
jsonlines = "^4.0.0"
httpx = "^0.25.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
black = "^23.11.0"
flake8 = "^6.1.0"
mypy = "^1.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
jobminer = "jobminer.main:main"
